@@ -3,6 +3,7 @@ package cz.hostingcentrum.Service;
 import cz.hostingcentrum.DTO.SubscriptionDto;
 import cz.hostingcentrum.Enum.SubscriptionStatus;
 import cz.hostingcentrum.Interface.SubscriptionService;
+import cz.hostingcentrum.Mapper.SubscriptionMapper;
 import cz.hostingcentrum.Model.Plan;
 import cz.hostingcentrum.Model.Subscription;
 import cz.hostingcentrum.Model.User;
@@ -18,7 +19,6 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,28 +27,16 @@ public class SubscriptionServiceImpl implements SubscriptionService {
     private final SubscriptionRepo subscriptionRepo;
     private final PlanRepo planRepo;
     private final UserRepo userRepo;
+    private final SubscriptionMapper subscriptionMapper;
 
-    // ========================================================================
-    // Get all subscriptions
-    // ========================================================================
     public List<SubscriptionDto> getAllSubscriptionsByUserId(Long userId) {
-        return subscriptionRepo.findByUserId(userId)
-                .stream()
-                .map(SubscriptionDto::fromEntity)
-                .collect(Collectors.toList());
+        return subscriptionRepo.findByUserId(userId).stream().map(subscriptionMapper::toDto).toList();
     }
 
-    // ========================================================================
-    // Get subscription by ID
-    // ========================================================================
     public SubscriptionDto getSubscriptionById(Long id) {
-        Optional<Subscription> optional = subscriptionRepo.findById(id);
-        return optional.map(SubscriptionDto::fromEntity).orElse(null);
+        return subscriptionRepo.findById(id).map(subscriptionMapper::toDto).orElse(null);
     }
 
-    // ========================================================================
-    // Create a new subscription
-    // ========================================================================
     public SubscriptionDto createSubscription(Long plan) {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         if (authentication == null) {
@@ -57,12 +45,10 @@ public class SubscriptionServiceImpl implements SubscriptionService {
 
         Optional<User> userOpt = userRepo.findByEmail(authentication.getName());
         Optional<Plan> planOpt = planRepo.findById(plan);
-
         if (userOpt.isEmpty()) {
             throw new IllegalArgumentException("User not found");
         }
-
-        if (planOpt.isEmpty()){
+        if (planOpt.isEmpty()) {
             throw new IllegalArgumentException("Plan not found");
         }
 
@@ -73,22 +59,13 @@ public class SubscriptionServiceImpl implements SubscriptionService {
         subscription.setCreatedAt(LocalDateTime.now());
         subscription.setUpdatedAt(LocalDateTime.now());
         subscription.setStatus(SubscriptionStatus.active);
-        subscription.setOrderNumber(
-                "ORD-" +
-                        LocalDate.now().getYear() + "-" +
-                        LocalDate.now().getMonthValue() + "-" +
-                        System.currentTimeMillis()
-        );
+        subscription.setOrderNumber("ORD-" + LocalDate.now().getYear() + "-" + LocalDate.now().getMonthValue() + "-" + System.currentTimeMillis());
         subscription.setStartedAt(LocalDateTime.now());
         subscription.setExpiresAt(LocalDateTime.now().plusMonths(1L));
 
-        Subscription saved = subscriptionRepo.save(subscription);
-        return SubscriptionDto.fromEntity(saved);
+        return subscriptionMapper.toDto(subscriptionRepo.save(subscription));
     }
 
-    // ========================================================================
-    // Update subscription status
-    // ========================================================================
     public SubscriptionDto updateSubscriptionStatus(Long id, SubscriptionStatus status) {
         Optional<Subscription> optional = subscriptionRepo.findById(id);
         if (optional.isEmpty()) {
@@ -96,7 +73,6 @@ public class SubscriptionServiceImpl implements SubscriptionService {
         }
         Subscription subscription = optional.get();
         subscription.setStatus(status);
-        Subscription updated = subscriptionRepo.save(subscription);
-        return SubscriptionDto.fromEntity(updated);
+        return subscriptionMapper.toDto(subscriptionRepo.save(subscription));
     }
 }
